# bgfx-assimp-3d-pbr-ibl-shiny-drill

./: CMakeLists.txt  README.md  exr.to.ktx.pipeline.txt  fs_drill.sc  fs_duck.sc  fs_skybox.sc  main.cpp  skybox.varying.def.sc  varying.def.sc  vs_duck.sc  vs_skybox.sc
